--- a/src/App.css
+++ b/src/App.css
@@ -2,18 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
-.pp {
-  --s: 10px; /* control the size */
-  padding: var(--s);
-  border: calc(2*var(--s)) solid #0000;
-  outline: 1px solid #000;
-  outline-offset: calc(-1*var(--s));
-  background: conic-gradient(from 90deg at 1px 1px,#0000 25%,#000 0);
+html {
+  scroll-behavior: smooth;
+  
 }
 
 body {
-  font-family: Georgia, serif;
+  font-family: 'Poppins', sans-serif;
+  background-color: black;
 }
 
+.videoBackground {
+  -webkit-filter: blur(15px);
+  -o-filter: blur(5px);
+  filter: blur(5px);
+}
 
 
