media query change

--- a/src/App.css
+++ b/src/App.css
@@ -18,9 +18,16 @@ body {
   filter: blur(5px);
 }
 
-.Typewriter{
-  text-align: center;
+
+@media screen and (max-width:1023px) {
+
+    .Typewriter{
+      text-align: center;
+
+    }
+  
 }
+  
 
 .App{
   overflow-x: hidden;
